--- a/Symfony/config/graphql/types/work.yaml
+++ b/Symfony/config/graphql/types/work.yaml
@@ -7,3 +7,9 @@ Work:
         type: "Int!"
       title:
         type: "String"
+      editions:
+        type: editionConnection
+        argsBuilder: "Relay::ForwardConnection"
+
+
+
