--- a/Symfony/config/packages/graphql.yaml
+++ b/Symfony/config/packages/graphql.yaml
@@ -9,3 +9,5 @@ overblog_graphql:
                     type: yaml
                     dir: "%kernel.project_dir%/config/graphql/types"
                     suffix: ~
+    services:
+        promise_adapter: "webonyx_graphql.sync_promise_adapter"
