--- a/Symfony/config/services.yaml
+++ b/Symfony/config/services.yaml
@@ -43,6 +43,11 @@ services:
 
     # -------------------------------------------------------------------------
 
+    app.graph.works_loader:
+        class: App\GraphQL\Loader\WorkLoader
+
+    # -------------------------------------------------------------------------
+
     aws_delayfish:
         class: App\Service\DelayFish
         autowire: false
