--- a/Symfony/config/graphql/types/work.yaml
+++ b/Symfony/config/graphql/types/work.yaml
@@ -1,7 +1,7 @@
 Work:
   type: object
   config:
-    resolveField: '@=resolver("App\\GraphQL\\Resolver\\WorkResolver", [info, value, args])'
+    resolveField: '@=resolver("workResolver", [info, value, args])'
     fields:
       id:
         type: "Int!"
