--- a/Symfony/config/services.yaml
+++ b/Symfony/config/services.yaml
@@ -43,8 +43,8 @@ services:
 
     # -------------------------------------------------------------------------
 
-    app.graph.works_loader:
-        class: App\GraphQL\Loader\WorkLoader
+#    app.graph.work_loader:
+#        class: App\GraphQL\Loader\WorkLoader
 
     # -------------------------------------------------------------------------
 
@@ -75,3 +75,20 @@ services:
     App\Service\ReviewManager:
         calls:
             - [setRatingManager, ['@App\Service\RatingManager']]
+
+    workResolver:
+        class: App\GraphQL\Resolver\WorkResolver
+        calls:
+            - [setWorkLoader, ['@overblog_dataloader.works_loader']]
+            - [setEditionLoader, ['@overblog_dataloader.editions_loader']]
+        tags:
+            - { name: overblog_graphql.resolver }
+
+    editionResolver:
+        class: App\GraphQL\Resolver\EditionResolver
+        calls:
+            - [setWorkLoader, ['@overblog_dataloader.works_loader']]
+            - [setEditionLoader, ['@overblog_dataloader.editions_loader']]
+        tags:
+            - { name: overblog_graphql.resolver }
+
