--- a/Symfony/config/packages/overblog_dataloader.yaml
+++ b/Symfony/config/packages/overblog_dataloader.yaml
@@ -7,9 +7,24 @@ overblog_dataloader:
             max_batch_size: 1000
             cache_map: "overblog_dataloader.cache_map"
     loaders:
-        works:
+        work:
             alias: "work_loader"
             batch_load_fn: '@App\GraphQL\Loader\WorkLoader'
-        editions:
+        edition:
             alias: "edition_loader"
             batch_load_fn: '@App\GraphQL\Loader\EditionLoader'
+        format:
+            alias: "format_loader"
+            batch_load_fn: '@App\GraphQL\Loader\FormatLoader'
+        post:
+            alias: "post_loader"
+            batch_load_fn: '@App\GraphQL\Loader\PostLoader'
+        comment:
+            alias: "comment_loader"
+            batch_load_fn: '@App\GraphQL\Loader\CommentLoader'
+        user:
+            alias: "user_loader"
+            batch_load_fn: '@App\GraphQL\Loader\UserLoader'
+        browseNode:
+            alias: "browseNode_loader"
+            batch_load_fn: '@App\GraphQL\Loader\BrowseNodeLoader'
