--- a/Symfony/config/services.yaml
+++ b/Symfony/config/services.yaml
@@ -40,12 +40,6 @@ services:
             - '@MongoDB\Client'
             - {database: 'dbSession', collection: 'session'}
 
-
-    # -------------------------------------------------------------------------
-
-#    app.graph.work_loader:
-#        class: App\GraphQL\Loader\WorkLoader
-
     # -------------------------------------------------------------------------
 
     aws_delayfish:
@@ -76,19 +70,42 @@ services:
         calls:
             - [setRatingManager, ['@App\Service\RatingManager']]
 
+    # -------------------------------------------------------------------------
+    # graphql
+
     workResolver:
         class: App\GraphQL\Resolver\WorkResolver
         calls:
-            - [setWorkLoader, ['@overblog_dataloader.works_loader']]
-            - [setEditionLoader, ['@overblog_dataloader.editions_loader']]
+            - [setWorkLoader, ['@overblog_dataloader.work_loader']]
+            - [setEditionLoader, ['@overblog_dataloader.edition_loader']]
         tags:
             - { name: overblog_graphql.resolver }
 
     editionResolver:
         class: App\GraphQL\Resolver\EditionResolver
         calls:
-            - [setWorkLoader, ['@overblog_dataloader.works_loader']]
-            - [setEditionLoader, ['@overblog_dataloader.editions_loader']]
+            - [setWorkLoader, ['@overblog_dataloader.work_loader']]
+            - [setEditionLoader, ['@overblog_dataloader.edition_loader']]
+            - [setFormatLoader, ['@overblog_dataloader.format_loader']]
         tags:
             - { name: overblog_graphql.resolver }
 
+    formatResolver:
+        class: App\GraphQL\Resolver\FormatResolver
+        tags:
+            - { name: overblog_graphql.resolver }
+
+    postResolver:
+        class: App\GraphQL\Resolver\PostResolver
+        calls:
+            - [setPostLoader, ['@overblog_dataloader.post_loader']]
+            - [setCommentLoader, ['@overblog_dataloader.comment_loader']]
+        tags:
+            - { name: overblog_graphql.resolver }
+
+    commentResolver:
+        class: App\GraphQL\Resolver\CommentResolver
+        calls:
+            - [setCommentLoader, ['@overblog_dataloader.comment_loader']]
+        tags:
+            - { name: overblog_graphql.resolver }
