added user, integrated comment/post

--- a/Symfony/config/graphql/types/Query.types.yaml
+++ b/Symfony/config/graphql/types/Query.types.yaml
@@ -36,3 +36,10 @@ Query:
           id:
             type: Int
         resolve: '@=resolver("commentResolver", [info, args["id"], args])'
+
+      user:
+        type: User
+        args:
+          id:
+            type: Int
+        resolve: '@=resolver("userResolver", [info, args["id"], args])'
