--- a/Symfony/config/graphql/types/comment.yaml
+++ b/Symfony/config/graphql/types/comment.yaml
@@ -12,6 +12,8 @@ Comment:
       replies:
         type: commentConnection
         argsBuilder: "Relay::ForwardConnection"
+      user:
+        type: User!
 
 commentConnection:
   type: relay-connection
