all pages at least stubbed

--- a/Symfony/config/graphql/types/Query.types.yaml
+++ b/Symfony/config/graphql/types/Query.types.yaml
@@ -2,6 +2,12 @@ Query:
   type: object
   config:
     fields:
+
+      posts:
+        type: postConnection
+        argsBuilder: "Relay::ForwardConnection"
+        resolve: '@=resolver("postsResolver", [info, args])'
+
       work:
         type: Work
         args:
