--- a/Symfony/config/packages/graphql.yaml
+++ b/Symfony/config/packages/graphql.yaml
@@ -1,7 +1,7 @@
 overblog_graphql:
     security:
-        enable_introspection: '%kernel.debug%'
-        query_max_depth: 5
+        ##enable_introspection: '%kernel.debug%'
+        query_max_depth: 12
 
     definitions:
         schema:
