--- a/Symfony/package.json
+++ b/Symfony/package.json
@@ -21,11 +21,17 @@
         "@babel/preset-es2015": "^7.0.0-beta.53",
         "@material-ui/core": "^3.9.2",
         "@material-ui/icons": "^3.0.2",
+        "apollo-cache-inmemory": "^1.5.1",
+        "apollo-client": "^2.5.1",
+        "apollo-link-http": "^1.5.14",
         "autosuggest-highlight": "^3.1.1",
+        "cross-fetch": "^3.0.2",
         "devbridge-autocomplete": "^1.4.10",
         "expose-loader": "^0.7.5",
         "fs": "^0.0.1-security",
         "generate": "^0.14.0",
+        "graphql": "^14.2.1",
+        "graphql-tag": "^2.10.1",
         "imports-loader": "^0.8.0",
         "jquery": "^3.3.1",
         "jquery-visible": "^1.2.0",
@@ -41,6 +47,7 @@
         "query-string": "^6.4.2",
         "raty-js": "^2.9.0",
         "raw-loader": "^2.0.0",
+        "react-apollo": "^2.5.4",
         "react-autosuggest": "^9.4.3",
         "react-dom": "^16.8.4",
         "react-helmet": "^5.2.0",
