server / client work rendering parity

--- a/Symfony/config/services_test.yaml
+++ b/Symfony/config/services_test.yaml
@@ -30,3 +30,4 @@ services:
     test.App\Service\ReviewManager: '@App\Service\ReviewManager'
     test.App\Service\ScoreManager: '@App\Service\ScoreManager'
     test.App\Service\SitemapGenerator: '@App\Service\SitemapGenerator'
+    test.App\Service\GraphQLExecutor: '@App\Service\GraphQLExecutor'
