--- a/Symfony/package.json
+++ b/Symfony/package.json
@@ -41,6 +41,7 @@
         "masonry-desandro": "^3.3.2",
         "modernizr": "^3.6.0",
         "modernizr-loader": "^1.0.1",
+        "moment": "^2.24.0",
         "node-sass": "^4.11.0",
         "package": "^1.0.1",
         "pickadate": "^3.5.6",
@@ -52,6 +53,7 @@
         "react-dom": "^16.8.4",
         "react-helmet": "^5.2.0",
         "react-masonry-layout": "^0.4.0",
+        "react-moment": "^0.9.2",
         "react-on-rails": "^11.2.2",
         "react-router-dom": "^5.0.0",
         "react-transition-group": "^2.6.1",
