blog page with comments

--- a/Symfony/config/graphql/types/post.yaml
+++ b/Symfony/config/graphql/types/post.yaml
@@ -29,6 +29,8 @@ Post:
         type: "String"
       published_at:
         type: "String"
+      comment_count:
+        type: "Int"
 
       user:
         type: User!
